# k4status

./: Cargo.toml  Dockerfile  Dockerfile.nixbuild  LICENSE  README.md  config.json  default.nix  format.sh  format_json.sh  template.json  test.sh
.github/workflows/: checks.yml
src/: badge.rs  configuration.rs  database.rs  icon.rs  main.rs  spaceapi.rs  template.rs
src/server/: mod.rs  router.rs
src/server/routes/: badge.rs  health.rs  icon.rs  mod.rs  status.rs
