[package]
name = "k4status"
version = "1.4.0"
authors = ["Max <max@karl.wf>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/k4cg/k4status"
description = "Space API for K4CG"
keywords = ["spaceapi", "hackspace", "k4cg"]

[dependencies]
influxdb = "0.7.2"
serde = "1.0.219"
serde_json = "1.0.140"
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["rt-multi-thread"] }
chrono = "0.4.41"
thiserror = "2.0.12"
log = "0.4.27"
simple_logger = { version = "5.0.0", default-features = false, features = ["timestamps"] }
clap = { version = "4.5.40", features = ["derive", "env"] }
num-traits = "0.2.19"
