[package]
name = "k4status"
version = "1.5.2"
authors = ["Max <max@karl.wf>"]
edition = "2024"
license = "MIT"
readme = "README.md"
repository = "https://github.com/k4cg/k4status"
description = "Space API for K4CG"
keywords = ["spaceapi", "hackspace", "k4cg"]

[dependencies]
influxdb = "0.7.2"
serde = "1.0.228"
serde_json = "1.0.145"
axum = "0.8.7"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
chrono = "0.4.42"
thiserror = "2.0.17"
log = "0.4.29"
simple_logger = { version = "5.1.0", default-features = false, features = ["timestamps"] }
clap = { version = "4.5.53", features = ["derive", "env"] }
num-traits = "0.2.19"
